@@ -73,6 +73,80 @@ name|Integer
 operator|.
 name|MIN_VALUE
 decl_stmt|;
+DECL|method|isPointQuery
+specifier|private
+specifier|static
+name|boolean
+name|isPointQuery
+parameter_list|(
+name|Query
+name|query
+parameter_list|)
+block|{
+comment|// we need to check for super classes because we occasionally use anonymous
+comment|// sub classes of eg. PointRangeQuery
+for|for
+control|(
+name|Class
+argument_list|<
+name|?
+argument_list|>
+name|clazz
+init|=
+name|query
+operator|.
+name|getClass
+argument_list|()
+init|;
+name|clazz
+operator|!=
+name|Query
+operator|.
+name|class
+condition|;
+name|clazz
+operator|=
+name|clazz
+operator|.
+name|getSuperclass
+argument_list|()
+control|)
+block|{
+specifier|final
+name|String
+name|simpleName
+init|=
+name|clazz
+operator|.
+name|getSimpleName
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|simpleName
+operator|.
+name|startsWith
+argument_list|(
+literal|"Point"
+argument_list|)
+operator|&&
+name|simpleName
+operator|.
+name|endsWith
+argument_list|(
+literal|"Query"
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+return|return
+literal|false
+return|;
+block|}
 DECL|method|isCostly
 specifier|static
 name|boolean
@@ -94,9 +168,24 @@ name|query
 operator|instanceof
 name|MultiTermQueryConstantScoreWrapper
 operator|||
+name|isPointQuery
+argument_list|(
 name|query
-operator|instanceof
-name|PointRangeQuery
+argument_list|)
+operator|||
+comment|// can't refer to TermsQuery directly as it is in another module
+literal|"TermsQuery"
+operator|.
+name|equals
+argument_list|(
+name|query
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getSimpleName
+argument_list|()
+argument_list|)
 return|;
 block|}
 DECL|method|isCheap
